--- a/feel music (1).html
+++ b/feel music (1).html
@@ -1,13 +1,15 @@
 <!DOCTYPE html!>
 <html lang="ca">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Descripció de la nostra webapp">
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="description" content="Descripció de la nostra webapp">
     <title>
         Feel Music
     </title>
-   </head>
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/solid.min.css">
+    </head>
    <body>
      <div id="superior">
          Feel Music
@@ -24,6 +26,12 @@
      <div id="seccio_4" class="seccio">
          escolta bona musica
      </div>
+        <div id="menu">
+          <i id="boto_1" class="fa-solid fa-house"></i>    <!-- secció inicial -->     
+          <i id="boto_2" class="fa-solid fa-camera"></i>    <!-- càmera -->
+          <i id="boto_3" class="fa-solid fa-image"></i>     <!-- galeria -->
+          <i id="boto_4" class="fa-solid fa-map"></i>    <!-- mapa -->
+          <i class="fa-solid fa-right-from-bracket"></i>    <!-- tancar sessió -->
      <div>
      </div>
    </body>
